# VideoDepthViewer3D

./: .gitignore  OPTIMIZATION_DETAILS.md  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py
backend/models/: depth_model.py
backend/routers/: session.py  stream.py
backend/utils/: adaptive_quality.py  calibration.py  depth_ops.py  depth_range.py  frame_info.py  packets.py  queues.py  stats.py
backend/video/: browser_compat.py  io.py  playback.py  session.py
scripts/: benchmark_pipeline.py  generate_test_media.py  inspect_gop.py  run_backend.py
tests/: conftest.py  test_adaptive_quality.py  test_benchmark_pipeline.py  test_browser_compat.py  test_calibration.py  test_config.py  test_depth_model.py  test_depth_ops.py  test_media_generator.py  test_packets.py  test_run_backend.py  test_session_cache.py  test_session_depth_cache.py  test_session_sharing.py  test_video_io.py
webapp/: eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webapp/src/: app.ts  lookingGlass.test.ts  lookingGlass.ts  lookingGlassInteraction.test.ts  lookingGlassInteraction.ts  lookingglass-webxr.d.ts  main.ts  mobileRemoteApp.test.ts  mobileRemoteApp.ts  style.css  types.ts  xrTest.test.ts  xrTest.ts  xrThreeBridge.ts
webapp/src/network/: depthClient.test.ts  depthClient.ts  depthPacket.test.ts  depthPacket.ts  depthSyncController.test.ts  depthSyncController.ts  depthSyncPolicy.ts  playbackControl.test.ts  playbackControl.ts  sessionApi.test.ts  sessionApi.ts
webapp/src/performance/: qualityPolicy.test.ts  qualityPolicy.ts
webapp/src/render/: frontSafety.test.ts  frontSafety.ts  mesh.test.ts  mesh.ts  projection.test.ts  projection.ts  scene.ts  shaders.ts  sourceView.test.ts  sourceView.ts
webapp/src/state/: playerStore.ts
webapp/src/ui/: controls.ts
webapp/src/utils/: clientMode.test.ts  clientMode.ts  depthBuffer.test.ts  depthBuffer.ts  env.ts  perfStats.ts
