[project]
name = "videodepthviewer3d"
version = "1.1.0"
description = "Streaming Video Depth viewer backend"
authors = [{ name = "Codex" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.17",
    "av>=12.0",
    "numpy>=1.26",
    "pillow>=10.4",
    "orjson>=3.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6"
]
inference = [
    "depth-anything-3 @ git+https://github.com/ByteDance-Seed/Depth-Anything-3@2c21ea849ceec7b469a3e62ea0c0e270afc3281a",
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=4.44",
    "einops>=0.8",
    "safetensors>=0.4",
    "opencv-python-headless>=4.10"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
